changed colors of past search buttons, fixed issue where tumblr search would stack over youtube videos on smaller resolution screen.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,8 +39,8 @@ h1 {
     background-color: azure;
     padding: 10px 10px 10px 10px;
     border-radius: 50px;
-    box-shadow: 10px 5px 5px black;
-    text-shadow: rgb(57, 60, 65) 1px 0 10px;
+    box-shadow: 2px 2px 2px black;
+    text-shadow: rgb(97, 126, 175) 1px 0 10px;
 }
 
 .link {
@@ -48,7 +48,7 @@ h1 {
     background-color: rgb(106, 186, 244);
     padding: 10px 10px 10px 10px;
     border-radius: 50px;
-    box-shadow: 10px 5px 5px black;
+    box-shadow: 2px 2px 2px black;
 }
 
 a:hover { 
@@ -77,7 +77,6 @@ h3 {
 
 #youtube {
     background-color: rgb(255, 255, 255);
-    height:65vh;
     width: 100%; 
     padding: 35px;
     color:white;
@@ -88,16 +87,17 @@ h3 {
     margin-left: auto;
     margin-right: auto;
     width:75%;
+    height:100%;
 }
 
 
 form { 
     margin-left: 30px;
     background-color: rgb(48, 48, 87);
-    width: 40vh;
+    width: 30vh;
     border-radius: 50px;
     max-width: 100vh;
-    max-height: 100vh;
+    max-height: 50vh;
 }
 
 label {
@@ -125,14 +125,21 @@ button {
 
 #prev-tags {
     color: #e1e1e1;
+    margin-top: 10px;
+    margin-left: 40px;
 }
 
 .prev-tag-button {
-    background-color: #ff0000;
+    background-color: #777575;
     padding: 10px 20px;
-    color: #ffffff;
+    color: #f6f6f6;
+    margin-top: 10px;
 }
 
+.prev-tag-button:hover {
+    color:white;
+    background-color: #545454;
+}
 
 
 /* Tumblr API Results Styles */
@@ -173,4 +180,4 @@ button {
     margin-right: 5px;
   }
 
-  
+ 
